--- a/constants/languages/english.json
+++ b/constants/languages/english.json
@@ -1,5 +1,7 @@
 {
     "gyaan":"english",
     "description":"This is english",
-    "RTL":false
+    "RTL":false,
+    "text":"English text",
+    "placeholder" : "English Placeholder for text box"
 }
