--- a/constants/languages/japanese.json
+++ b/constants/languages/japanese.json
@@ -1,5 +1,7 @@
 {
     "gyaan":"Japanese",
     "description":"This is Japanese",
-    "RTL":true
+    "RTL":true,
+    "text":"Japanese text",
+    "placeholder" : "Japanese Placeholder for text box"
 }
